@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-14T16:37:06Z",
-  "count_outdated" : 777,
-  "uniques_outdated" : 406,
-  "count" : 797,
-  "uniques" : 418,
+  "timestamp" : "2022-09-15T02:46:42Z",
+  "count_outdated" : 781,
+  "uniques_outdated" : 408,
+  "count" : 800,
+  "uniques" : 419,
   "clones" : [
-    {
-      "timestamp": "2022-08-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 2,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
