@@ -1,12 +1,7 @@
 {
-  "count": 20,
-  "uniques": 3,
+  "count": 19,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2022-08-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-01T00:00:00Z",
       "count": 2,
@@ -59,7 +54,7 @@
     },
     {
       "timestamp": "2022-09-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
