@@ -1,3 +1,11 @@
+2022-09-15T02:46:42Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3057448638
+* notice: last 14d: unq all: 2 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 406 777 / 418 797
+* notice: next accum: outdated-unq outdated-all / unq all: 408 781 / 419 800
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-08-31] / [2022-09-14]
+
 2022-09-14T16:37:06Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3054505172
 * notice: last 14d: unq all: 3 20
